online_judge/usermodule/static/all_submissions/272/error_6.txt
/media/nemish/College/GIT/Online-term-work-submission-and-assessment-labs/online_judge/usermodule/static/all_submissions/272/codefile_6.cpp: In function ‘int main()’:
/media/nemish/College/GIT/Online-term-work-submission-and-assessment-labs/online_judge/usermodule/static/all_submissions/272/codefile_6.cpp:71:20: error: ‘edl’ was not declared in this scope
         cout<<ans<<edl;
                    ^~~
